--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "@langchain/core": "^0.3.43",
+    "@langchain/langgraph": "^0.2.63",
     "@langchain/ollama": "^0.2.0",
     "dotenv": "^16.4.7",
+    "readline-sync": "^1.4.10",
     "zod": "^3.24.2"
   }
 }
