--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@langchain/core": "^0.3.43",
+    "@langchain/google-genai": "^0.2.3",
     "@langchain/langgraph": "^0.2.63",
     "@langchain/ollama": "^0.2.0",
     "dotenv": "^16.4.7",
+    "langchain": "^0.3.21",
     "readline-sync": "^1.4.10",
     "zod": "^3.24.2"
   }
